List of all commands

--- a/lol-wasm/extension/platypus.html
+++ b/lol-wasm/extension/platypus.html
@@ -1,5 +1,9 @@
 <html>
+  <head>
+  </head>
   <body>
-    <h1>Platypul LOL!</h1>
+    <h2>List of search commands</h2>
   </body>
+  <script src="platypus.js" type="module"></script>
+  <div id="commands" style="width: 30em;"/>
 </html>
