--- a/lol-wasm/extension/options.html
+++ b/lol-wasm/extension/options.html
@@ -16,6 +16,6 @@
 		</textarea>
 
 
-    <script src="options.js"></script>
+    <script src="options.js" type="module"></script>
   </body>
 </html>
