Compile extension options

--- a/extension/options.html
+++ b/extension/options.html
@@ -15,6 +15,9 @@
 			cols="80">
 		</textarea>
 
+    <h3>Remote configs</h3>
+    <pre id="remote_configs">
+    </pre>
 
     <script src="options.js" type="module"></script>
   </body>
