--- a/resources/index.html
+++ b/resources/index.html
@@ -16,7 +16,9 @@
     To install Platypuslol, just do following:
     <ul>
       <li>
-        If you are on Firefox browser, <a href="#" onclick="window.external.AddSearchProvider('{server}/install/opensearch.xml');">click here to add it</a>. I recommend to add it as your default search engine, so that you have search suggestions. Otherwise, go to settings for search engines, and assign keyword to it (for example "p") and that as prefox for your searches.
+        If you are on Firefox browser, <a href="#" onclick="window.external.AddSearchProvider('{server}/install/opensearch.xml');">click here to add it</a>.
+        I recommend to add it as your default search engine, so that you have search suggestions.
+        Otherwise, go to settings for search engines, and assign keyword to it (for example "p") and that as prefix for your searches.
       </li>
       <li>
         If you are using Google Chrome, do following.
