Add config page, to view and edit config.

--- a/resources/index.html
+++ b/resources/index.html
@@ -33,5 +33,6 @@
       </li>
     </ul>
     To see list of available commands, go <a href="{server}/list">here</a>.
+    To see the configuration and test new commands, go <a href="{server}/config">here</a>.
   </body>
 </html>
